# pokemmo-companion

./: .gitignore  INSTALL.txt  README.md  build.py  companion.py  install.bat  overlay_runner.py  pyproject.toml  requirements-web.txt  requirements.txt  run.py  start.bat  web.py
.githooks/: pre-push
data/: ability_fr.json  ocr_regions.json  pokemon.db  pokemon_names_fr.json
docs/: CAHIER_DES_CHARGES.md
scripts/: add_french_names.py  build_database.py  build_evolutions.py  build_moves.py  build_progression.py  download_pokemmo_data.py  download_sprites.py  import_spawns.py  translate_locations.py
src/: main.py
src/app/: main_window.py  onboarding.py  splash.py  sprite_cache.py  theme.py  widgets.py
src/app/pages/: battle.py  collection.py  dashboard.py  notes.py  pokedex.py  settings.py  shiny_lab.py  team_builder.py
src/capture/: screen_capture.py
src/data/: database.py  type_chart.py
src/detection/: battle_detector.py  ocr_engine.py  route_detector.py  state_machine.py
src/tools/: breeding.py  damage_calc.py  ev_training.py  iv_calculator.py  move_recommender.py  showdown_parser.py
src/ui/: debug_window.py  overlay.py
src/ui/widgets/: battle_panel.py  debug_overlay.py  encounter_counter.py  guide_panel.py  pokedex_widget.py  team_analyzer.py  tools_panel.py
src/utils/: config.py  constants.py  logger.py  sound.py
src/web/: server.py
src/web/static/: app.js  manifest.json
src/web/templates/: index.html
tests/: test_app.py  test_damage_calc.py  test_encounter.py  test_iv_calculator.py  test_ocr_regression.py  test_type_chart.py
