[project]
name = "pokemmo-companion"
version = "0.1.0"
description = "PokeMMO Companion — Real-time overlay with spawn data, battle counters, and game guides"
requires-python = ">=3.11"
dependencies = [
    "bettercam>=1.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8",
    "PyQt6>=6.6",
    "Pillow>=10.0",
    "numpy>=1.24",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
scripts = [
    "requests>=2.31",
]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
    "mss>=9.0",
]

[project.scripts]
pokemmo-companion = "src.main:main"
